Fix box-sizing to avoid horizontal scrollbar

--- a/client/app/styl/flexbox.styl
+++ b/client/app/styl/flexbox.styl
@@ -45,6 +45,7 @@
 		font-size: 20px
 		line-height: 25px
 		padding: 5px
+		box-sizing: border-box
 		cursor: pointer
 	}
 }
